--- a/css/index.css
+++ b/css/index.css
@@ -109,7 +109,7 @@ footer {
     padding: 0 0.22rem;
     position: fixed;
     left: 0;
-    bottom: 0rem;
+    bottom: 0;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     display: flex;
