--- a/css/service.css
+++ b/css/service.css
@@ -1,50 +1,63 @@
 
-.header{
+.header {
     display: flex;
     justify-content: space-between;
     color: #36a8fe;
-    padding: 0 0.22rem;
+    padding: 0.22rem 0.22rem 0 0.22rem;
+    box-sizing: border-box;
 }
-.header a{
+
+.header a {
     color: #36a8fe
 }
+
 .select .type {
-    margin-top: 1.4rem;
+    padding: 0.52rem 0 0.25rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
-.select .type li{
+
+.select .type li {
     width: 1.3rem;
     height: 0.52rem;
     background: #3bacfe;
-    border-radius: 0.18rem;
+    border-radius: 0.26rem;
     text-align: center;
     font-size: 0.2rem;
     line-height: 0.52rem;
     color: #FFFFFF;
+    margin: 0 0.2rem;
 }
-.select .type li:nth-child(2) ,.type li:nth-child(3){
+
+.select .type li:nth-child(2), .type li:nth-child(3) {
     background: #e7f6ff;
     color: #4ebbfe;
 }
-.main ul{
+
+.shadow{
+    box-shadow: 0 0.03rem 0.43rem 0 rgba(41, 167, 255, 0.13);
+}
+.main ul {
     padding: 0 0.22rem;
     margin-top: 0.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.main ul li{
+
+.main ul li {
     width: 1.38rem;
     height: 1.66rem;
     position: relative;
 }
-.main ul li img{
+
+.main ul li img {
     width: 1.4rem;
     height: 1.4rem;
 }
-.main ul li p{
+
+.main ul li p {
     font-size: 0.24rem;
     text-align: center;
     position: absolute;
@@ -52,11 +65,13 @@
     left: 0.4rem;
     color: #8e9397;
 }
-.all{
+
+.all {
     padding: 0 0.22rem;
     height: 0.9rem;
 }
-.all span{
+
+.all span {
     display: block;
     font-size: 0.32rem;
     color: #41b2fc;
@@ -64,7 +79,8 @@
     float: left;
     position: relative;
 }
-.all .type1:before{
+
+.all .type1:before {
     content: '';
     display: block;
     width: 0.1rem;
@@ -75,40 +91,129 @@
     left: 0rem;
     top: 0.2rem;
 }
-.all .type2{
+
+.all .type2 {
     color: #4f5b64;
 }
-.list{
+
+.listItem {
     width: 100%;
-    position: absolute;
-    top: 2.7rem;
-    bottom: 0;
+    height: 2rem;
     padding: 0 0.22rem;
     box-sizing: border-box;
-    background: #f0faff;
-}
-.listItem{
-    height: 1.74rem;
-    margin-bottom: 0.66rem;
     display: flex;
+    margin-top: 0.32rem;
 }
 
-.thumb{
-    width: 1.74rem;
-    height: 1.74rem;
-    padding: 0.3rem;
-    box-sizing: border-box;
-    background: #FFFFFF;
+.thumb {
+    background: #ffffff;
+    rgba(223, 223, 223, 0.43);
+    box-shadow: 0 0.01rem 0.21rem 0 rgba(223, 223, 223, 0.43);
+}
 
+.listItem .thumb a img {
+    width: 1.2rem;
+    height: 1.44rem;
+    padding: 0.31rem 0.36rem 0.22rem 0.41rem;
 }
-.thumb img{
-    width: 100%;
-    height: 100%;
-}
-.info{
+
+.info {
     flex-grow: 1;
-    padding-left: 0.26rem;
+    margin-left: 0.3rem;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+}
+.info h3{
+    font-size: 0.3rem;
+    color: #000000;
+    opacity: 0.6;
+}
+.info p{
+    font-size: 0.22rem;
+    color: #000000;
+    opacity: 0.3;
+    margin-top: 0.15rem;
+    border-bottom: 0.01rem solid #d8dfe3;
+    margin-bottom: 0.1rem;
+    padding-bottom: 0.1rem;
+}
+.info > a > span:before{
+    content: '';
+    display: block;
+    width: 0.05rem;
+    height: 0.05rem;
+    background-color: #44b5ff;
+    border-radius: 50%;
+    position: absolute;
+    left: -0.14rem;
+    top: 0.1rem;
+}
+.info > a > span:nth-child(4)::before{
+    background: #36d681;
+    box-shadow: 0 0.02rem 0.05rem 0 rgba(54, 214, 129, 0.43);
+}
+.info span{
+    font-size: 0.2rem;
+    color: #000000;
+    /*opacity: 0.3;*/
+    margin-right: 0.55rem;
+    margin-left: 0.2rem;
+    position: relative;
+}
+.info span b{
+    font-size: 0.24rem;
+    color: #36a8fe;
+}
+.info .price{
+    width: 1.08rem;
+    height: 0.25rem;
+    font-size: 0.26rem;
+    color: #fbb548;
+    float: right;
+}
+.info .shop img{
+    width: 0.3rem;
+    height: 0.3rem;
+    margin-top: 0.19rem;
+    float: left;
+}
+.info .shop span{
+    display: block;
+    float: left;
+    margin-left: 0.08rem;
+    margin-top: 0.24rem;
+}
+
+footer {
+    width: 100%;
+    height: 0.98rem;
+    background: #f1f9ff;
+    padding: 0.1rem 0.22rem 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: flex;
     justify-content: space-between;
+}
+
+footer > a {
+    width: 0.7rem;
+    height: 100%;
+    text-align: center;
+    font-size: 0.24rem;
+    opacity: 0.5;
+    color: #4ebbfe;
+}
+
+footer .hot {
+    opacity: 1;
+}
+
+footer > a img {
+    width: 0.5rem;
+    height: 0.5rem;
+    display: inline-block;
 }
