--- a/css/shop.css
+++ b/css/shop.css
@@ -30,8 +30,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    border-bottom: 0.01rem solid rgba(0,0,0,0.4);
-    box-shadow: 0px 2px 3px 0px rgba(68, 181, 255, 0.2);
+    border-bottom: 0.01rem solid #f0f5f7;
+
 }
 .shuoming >span{
     color: #000000;
@@ -74,8 +74,7 @@
     height: 1.1rem;
     padding:0 0.22rem;
     box-sizing: border-box;
-    border-bottom: 0.01rem solid rgba(0,0,0,0.4);
-    box-shadow: 0px 2px 3px 0px rgba(68, 181, 255, 0.2);
+    border-bottom: 0.01rem solid #f0f5f7;
 }
 .discount img{
     width: 0.49rem;
@@ -109,8 +108,7 @@
 .beizhu{
     height: 0.75rem;
     padding: 0 0.22rem;
-    border-bottom: 0.01rem solid rgba(0,0,0,0.4);
-    box-shadow: 0px 2px 3px 0px rgba(68, 181, 255, 0.2);
+    border-bottom: 0.01rem solid #f0f5f7;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -131,13 +129,15 @@
     left: -0.12rem;
     top: 0.14rem;
 }
+
+
 .evaluate{
     padding: 0 0.22rem;
 }
 .evaluate .title{
     height: 1.2rem;
 }
-.evaluate span{
+.evaluate  span{
     display: block;
     font-size: 0.32rem;
     color: #4ebbfe;
@@ -169,6 +169,8 @@
 .evaluate ul li{
     height: auto;
     display: flex;
+    border-bottom: 0.01rem solid #f0f5f7;
+    margin-top: 0.3rem;
 }
 .evaluate ul li .head{
     width: 0.85rem;
@@ -214,6 +216,7 @@
     font-size: 0.22rem;
     color: #000000;
     opacity: 0.3;
+    margin-bottom: 0.57rem;
 
 }
 .shoes img{
@@ -222,7 +225,7 @@
 }
 .shop{
     height: 0.9rem;
-    border-bottom: 0.01rem solid rgba(0,0,0,0.6);
+    border-bottom: 0.01rem solid #f0f5f7;
 }
 .shop span{
      display: block;
@@ -245,87 +248,82 @@
 .shop .type2{
     color: #4f5b64;
 }
+
 .recommend{
-    height: 7.3rem;
-    overflow: hidden;
+    width: 100%;
+    height:auto;
+    padding-bottom: 1.1rem;
 }
-.recommend span{
-    display: block;
-    font-size: 0.32rem;
-    color: #35db82;
-    margin-top: 0.42rem;
-    float: left;
-}
-.recommend .type1:before{
-    content: '';
-    display: block;
-    width: 0.1rem;
-    height: 0.05rem;
-    border-radius: 0.05rem;
-    background: #35db82;
-    position: absolute;
-    left: -0.14rem;
-    top: 0.2rem;
-}
-.recommend .type2{
-    color: #4f5b64;
-}
+.title{
+     width: 100%;
+     height: 0.85rem;
+ }
 .recommend ul{
-    margin-top: 1.3rem;
-    padding: 0.22rem;
-    height: 6.1rem;
+    width: 100%;
+    height: 6.46rem;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 .recommend ul li{
-    width: 1.8rem;
-    height: 2.6rem;
+    width: 1.88rem;
+    height: 3rem;
+    padding: 0.22rem 0.18rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    position: relative;
-    margin-left: 0.4rem;
 }
-.recommend img{
+.recommend ul li img{
     width: 1.3rem;
     height: 1.38rem;
+    display: block;
+    margin-top: 0.2rem;
+    margin-left: 0.2rem;
 }
-.recommend ul p{
+.recommend ul li p{
     font-size: 0.26rem;
     color: #000000;
     opacity: 0.6;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    position: absolute;
-    bottom: 0.4rem;
+    margin-top: 0.3rem;
 }
-.recommend ul span{
+.recommend ul li > span{
+    margin-top: 0.19rem;
     font-size: 0.28rem;
     color: #fbb548;
 }
+
+
+
 .bottom{
     height: 1.1rem;
-    padding: 0 0.22rem;
+    width: 100%;
+    padding: 0.15rem 0.22rem;
     background: #f1faff;
     display: flex;
     justify-content: space-around;
+    box-sizing: border-box;
+    align-items: center;
+}
+.bottom >div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .bottom .buy img{
     width: 0.5rem;
     height: 0.46rem;
-    margin-left: 0.06rem;
 }
 .bottom .tel img{
     width: 0.5rem;
     height: 0.5rem;
-    margin-left: 0.36rem;
 }
 .bottom .buy p{
     color: #4ebbfe;
+    font-size: 0.2rem;
 }
 .bottom .tel p{
     color: #2ed977;
+    font-size: 0.2rem;
 }
 .bottom .join span{
      display: block;
@@ -334,7 +332,6 @@
      background: #37e06f;
      border-radius: 0.18rem;
      text-align: center;
-     margin-top: 0.2rem;
      font-size: 0.24rem;
      line-height: 0.6rem;
      color: #ffffff;
@@ -346,7 +343,6 @@
     background: #3bacfe;
     border-radius: 0.18rem;
     text-align: center;
-    margin-top: 0.2rem;
     font-size: 0.24rem;
     line-height: 0.6rem;
     color: #ffffff;
