--- a/css/shopping.css
+++ b/css/shopping.css
@@ -45,8 +45,8 @@
     z-index: 100;
 }
 .goods ul li .tu img{
-    width: 1.74rem;
-    height: 1.74rem;
+    width: 1.19rem;
+    height: 1.25rem;
     margin-left: 0.56rem;
     margin-top: 0rem;
 }
@@ -108,71 +108,36 @@
 }
 
 .bottom{
-    height: 1.1rem;
+    width: 100%;
+    height: 1.08rem;
+    padding: 0.12rem 0.22rem;
+    box-sizing: border-box;
+    position: fixed;
+    bottom: 0;
     background: #f1faff;
-    margin-top: 3.3rem;
-    padding: 0 0.22rem;
-    position: relative;
-
-}
-.bottom .money{
-    width: 2.7rem;
-    height: 1.1rem;
-    flex-grow: 1;
 }
 .bottom .money span{
-    display: flex;
     font-size: 0.24rem;
     color: #3bacfe;
-    margin-top: 0.1rem;
-    float: left;
-    margin-left: 0.2rem;
-    position: relative;
+    opacity: 0.6;;
 }
-.bottom .money span::before{
-    content: '';
-    display: block;
-    width: 0.05rem;
-    height: 0.05rem;
-    border-radius: 50%;
-    background: #4ebbfe;
-    position: absolute;
-    left: -0.2rem;
-    top: 0.2rem;
-}
-.bottom .money .he{
-    display: inline;
-}
-.bottom .money b {
+.bottom .money span b{
     font-size: 0.36rem;
-    color: #36a8fe;
-    margin-top: 0.22rem;
-}
-.bottom .button{
-    background: #f1faff;;
-}
-.bottom .button img{
-    width: 3.8rem;
-    height: 1rem;
-    float: right;
-    position: absolute;
-    bottom: 0.1rem;
-    right: 0;
 }
 .bottom .button{
     width: 3.8rem;
     height: 0.6rem;
-    background: #31d69a;
-    border-radius: 0.3rem;
-    float: right;
+    background: #37e06f;
+    box-shadow: 0 0.04rem 0.2rem 0 rgba(55, 223, 116, 0.75);
+    border-radius: 30px;
     position: absolute;
-    top: 0.28rem;
-    right: 0;
+    right: 0.24rem;
+    top: 0.26rem;
 }
-.bottom .button a{
+.bottom a p{
     text-align: center;
-    line-height: 0.6rem;
     font-size: 0.24rem;
+    line-height: 0.6rem;
     color: #FFFFFF;
 }
 
